[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/NPCs/ZoneTutorialBriefing.gd" type="Script" id=1]

[node name="ZoneTutorialBriefing" type="Area2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_ZoneTutorialBriefing_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ZoneTutorialBriefing_body_exited"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
